Edge Length will not be diplayed properly with Clipping Borders #30361

Closed
opened 2012-02-26 11:40:12 +01:00 by No One · 4 comments

%%%Blender 2.62.0 r44136, Win7 x64, GTX 550Ti

In Edit Mode, Edge Length on: the length of an edge will be displayed. When using a Clipping Border (by default: alt-b), the edge length will not be displayed (only when leaving Clipping Border mode again).

This effect depends on the size and position of the Clipping Border (though I always placed it in a way that all selected points were within the border). Sometimes Edge Lengths out of the Clipping Border will still be visualized when a clipping border is active.

The same effect applies to Face Angles, Face Area.

Demo file attached.%%%

%%%Blender 2.62.0 r44136, Win7 x64, GTX 550Ti In Edit Mode, Edge Length on: the length of an edge will be displayed. When using a Clipping Border (by default: alt-b), the edge length will not be displayed (only when leaving Clipping Border mode again). This effect depends on the size and position of the Clipping Border (though I always placed it in a way that all selected points were within the border). Sometimes Edge Lengths _out_ of the Clipping Border will still be visualized when a clipping border is active. The same effect applies to Face Angles, Face Area. Demo file attached.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%confirmed. looking into it.%%%

%%%confirmed. looking into it.%%%

%%%fixed r44515%%%

%%%fixed r44515%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30361
No description provided.