fix [#30361] Edge Length will not be diplayed properly with Clipping Borders

the clipping test done for text drawing was called with local=FALSE, however with mesh info text this needs the local argument to be set.